other-vpol/prevent-cr8escape/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      securityContext:
        sysctls:
        - name: "foo"
          value: "bar"
        - name: "bar"
          value: "foo"
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          securityContext:
            sysctls:
            - name: "foo"
              value: "bar"
            - name: "bar"
              value: "foo"
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: OnFailure
