other-vpol/prevent-cr8escape/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: prevent-cr8escape
spec:
  # disable templating because it can cause issues with ValidatingPolicy
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../prevent-cr8escape.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: prevent-cr8escape
          spec:
            validationActions: [Deny]
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, `"characters '+' or '=' are not allowed in sysctls values"`)): true
        file: pods-bad.yaml
    - apply:
        file: podcontroller-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, `"characters '+' or '=' are not allowed in sysctls values"`)): true
        file: podcontroller-bad.yaml
